--- a/Web/App/styles/mobile.less
+++ b/Web/App/styles/mobile.less
@@ -44,8 +44,9 @@
       -moz-appearance: none;
       appearance: none;
     }
-    padding: 0;
+    padding: 0;    
     border: none;
+    border-radius: 0;
   }
 
   section {
